# fris

./: .flake8  .pre-commit-config.yaml  .pydocstyle  README.md  mypy.ini  pyproject.toml
fris/: fris_datastructures.py  fris_functions.py  fris_types.py  nn_data_generator.py  nn_utils.py  wx_fris_gui.py
tests/: fris_datastructure_test.py  fris_test.py  nn_data_generator_test.py  nn_utils_test.py
